<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.sdsu.vyshak.personalexpensetracker.activity.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/upcomingPayments"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/notifynothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_due"
        android:textStyle="italic" />

    <ListView
        android:id="@+id/paymentlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.82"></ListView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/balance"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usd" />

        <TextView
            android:id="@+id/textView_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_balance"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/balanceinmycurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/button_addAccount"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_account"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button_addExpense"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_Expense" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_shoppingCart"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/shopping_cart"
                android:textColorLink="@color/colorAccent" />

            <Button
                android:id="@+id/button_alerts"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_budget" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>


