<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.sdsu.vyshak.personalexpensetracker.SummaryList">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/shopList"
        android:icon="@drawable/ic_shopping_cart_black_24px"
        android:orderInCategory="100"
        android:title="@string/addShopList"
        app:showAsAction="always" />

    <item
        android:id="@+id/alertMe"
        android:icon="@drawable/ic_add_alert_black_24px"
        android:orderInCategory="100"
        android:title="@string/addAlert"
        app:showAsAction="never" />

    <item
        android:id="@+id/setBudget"
        android:icon="@drawable/ic_assignment_black_24px"
        android:orderInCategory="100"
        android:title="@string/addAlert"
        app:showAsAction="always" />


    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:icon="@drawable/ic_power_settings_new_black_24px"
        app:showAsAction="never" />
</menu>
