<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.sdsu.vyshak.personalexpensetracker.SetBudgetActivity"
    tools:showIn="@layout/activity_set_budget">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="@id/appbar"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ListView
            android:id="@+id/budgetlist"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_weight="132.40"
            android:dividerHeight="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/budget_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.52"
            android:text="@string/limit_to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/budget_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinner_limitper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/set_limit_per" />

        <Spinner
            android:id="@+id/notifybefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_setBudget_Cancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_setBudget_OK"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setup_budget_limit" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
