<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:weightSum="4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.sdsu.vyshak.personalexpensetracker.activity.LoginActivity"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/app_title_text"
            android:textSize="30sp"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signed_out" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorFAB2"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_vertical|center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="266dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="textAutoComplete|textEmailAddress|textWebEmailAddress"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp" />


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>