<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdsu.vyshak.personalexpensetracker.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:id="@+id/formprogress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/myProfile"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                android:theme="@style/ThemeOverlay.MyTitleText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/textusername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:nextFocusForward="@+id/email"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/hint_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:nextFocusForward="@+id/phone"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/phone"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusForward="@+id/password"
                android:layout_marginTop="10dp"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusForward="@+id/spinner_currency"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:text="@string/currency"
                android:textAlignment="center" />


            <Spinner
                android:id="@+id/spinner_currency"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingTop="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
